--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <button id="botonCarta">Pedir carta</button>
       <button id="BotonPlantarse">Me planto</button>
       <button id="nueva">Nueva partida</button>
+      <button id="seguir">Seguir</button>
       <div id="puntuacion"></div>
       <div id="mensaje"></div>
     </div>
