--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
   </head>
   <body>
     <div id="app">
-      <img id="cartaImg" src="./src/img/back.jpg" alt="carta">
-      <button id="botonCarta">Pedir carta</button>
-      <button id="BotonPlantarse">Me planto</button>
-      <button id="nueva">Nueva partida</button>
-      <button id="seguir">Seguir</button>
+      <div class="fondoCarta">
+        <img id="cartaImg" src="./src/img/back.jpg" alt="carta">
+      </div>
+
+      <div class="container">
+        <button id="botonCarta">Pedir carta</button>
+        <button id="BotonPlantarse">Me planto</button>
+        <button id="nueva">Nueva partida</button>
+        <button id="seguir">Seguir</button>
+      </div>
+      
       <div id="puntuacion"></div>
       <div id="mensaje"></div>
     </div>
